[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ship/ship.png" type="Texture" id=1]
[ext_resource path="res://Ship/Ship.gd" type="Script" id=2]
[ext_resource path="res://Areas/PlayerDetection.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Fonts/PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/InteractLabel.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18, 56 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, -6 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18, 59 ), Vector2( -18, 52 ), Vector2( -18, 59 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 52.25, 16 )

[sub_resource type="DynamicFont" id=4]
size = 4
font_data = ExtResource( 4 )

[node name="Ship" type="KinematicBody2D"]
z_index = 6
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 0 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionPolygon2D")
autoplay = "float"
playback_speed = 0.5
anims/RESET = SubResource( 2 )
anims/float = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( -18, 56 )
shape = SubResource( 1 )

[node name="PlayerDetection" parent="." instance=ExtResource( 3 )]
position = Vector2( -53, 27 )
scale = Vector2( 0.255128, 0.189784 )

[node name="InteractLabel" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -70.0
margin_top = 9.0
margin_right = -70.0
margin_bottom = 9.0

[node name="Sail" type="Label" parent="."]
visible = false
margin_left = -70.0
margin_top = 9.0
margin_right = -16.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 4 )
text = "sail now?
1-yes
2-no"

[connection signal="body_shape_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_shape_entered"]
[connection signal="body_shape_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_shape_exited"]
